tests/compError/List.iota
// compError
// error: expected type "struct builtin:List{
// 	T struct builtin:String{}
// }", but got type "struct builtin:List{
// 	T struct builtin:Number{}
// }"
//   field "T" expected type struct builtin:String{}, but got type struct builtin:Number{}
// line:17 -> for function call here
// line:17 -> (this argument)
// line:16 -> function from here

List = builtin_List
String = builtin_String
Number = builtin_Float64

I = @x(List String) x
I [1]